@@ -12,6 +12,8 @@
 	* circuits.controlled_U
 	* circuits.toffoli
 	* circuits.fredkin
+	* HilbertArray.mutual_info() [untested]
+	* HilbertArray.relative_entropy() [untested, broken?]
 
 === qitensor-0.10 (Dan Stahlke, 2012-10-27) ===
 	* can run doctests via 'setup.py test'
